--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
 
-  <body></body>
+  <body>
+    <h1>Hello world!</h1>
+  </body>
 </html>
